bases/downloaders/jackett/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jackett
  annotations:
    k0s.reynn.net/resource-profile: mini
spec:
  selector:
    matchLabels:
      app: jackett
  template:
    metadata:
      labels:
        app: jackett
    spec:
      containers:
        - name: jackett
          image: linuxserver/jackett
          imagePullPolicy: Always
          resources: {}
          ports:
            - containerPort: 9117
              name: tcp-server
          volumeMounts:
            - mountPath: /config
              name: config
        # - name: flaresolver
        #   image: ghcr.io/flaresolverr/flaresolverr:latest
        #   env:
        #     - name: LOG_LEVEL
        #       value: debug
        #   ports:
        #     - name: http
        #       containerPort: 8191
        #   resources:
        #     requests:
        #       memory: "32Mi"
        #       cpu: "0.075"
        #     limits:
        #       memory: "64Mi"
        #       cpu: "0.15"
        #   livenessProbe:
        #     httpGet:
        #       port: http
        #       scheme: HTTP
        #       path: /
        #     initialDelaySeconds: 30
        #     timeoutSeconds: 10
        #     failureThreshold: 5
        #   readinessProbe:
        #     httpGet:
        #       port: http
        #       scheme: HTTP
        #       path: /
        #     initialDelaySeconds: 30
        #     timeoutSeconds: 10
        #     failureThreshold: 5
      volumes:
        - name: config
          hostPath:
            path: /media/server/jackett
            type: Directory
