bases/downloaders/jackett/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: jackett
spec:
  type: NodePort
  selector:
    app: jackett
  ports:
    - name: tcp
      port: 9117
      nodePort: 32767
